# quackers

./: .gitignore  README.md  main.py  pyproject.toml
deployment/: gunicorn.service  gunicorn.socket  nginx.conf
qbert/: core.py  data.py  helpers.py
quackers/: core.py  data.py  helpers.py
scripts/: add_slack_ids_to_airtable.py
