[tool.poetry]
name = "quackers"
version = "1.0.0"
description = "A Q&A slackbot to assist with Q1."
authors = ["Joe Kaufeld <joe@kenzie.academy>"]

[tool.poetry.dependencies]
python = "^3.8"
slackclient = "^2.5.0"
python-dotenv = "^0.10.5"
flask = "^1.1.1"
requests = "^2.22.0"
airtable-python-wrapper = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
